kubernetes/python-flask/gke/dev/1-deployment.yaml
# This file configures the docfactory--api app which serves public web traffic.
#kind: Deployment kind: Job kind: Service kind: Pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-flask
  labels:
    app: python-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-flask
  template:
    metadata:
      labels:
        app: python-flask
    spec:
      containers:
        - name: python-flask
          image: gcr.io/innate-bonfire-361004/python-flask-nombre-gke:latest
          # This app listens on port 8080 for web traffic by default.
          ports:
          - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
