kubernetes/python-flask/gke/dev/2-service.yaml
# The hello service provides a load-balancing proxy over the hello-app
# pods. By specifying the type as a 'LoadBalancer', Kubernetes Engine will
# create an external HTTP load balancer.
#  type: ClusterIP type: LoadBalancer type: NodePort
apiVersion: v1
kind: Service
metadata:
  name:  python-flask
spec:
  type: LoadBalancer
  selector:
    app:  python-flask
  ports:
  - name: port-http
    port: 80
    targetPort: 8080
