kubernetes/python-flask/gke/dev/ingress.yaml
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-docfactory-gke
  labels:
    app: docfactory
  annotations:
    kubernetes.io/ingress.allow-http: "false" # disable HTTP
    kubernetes.io/ingress.global-static-ip-name: docfactory-static-ip
    ingress.gcp.kubernetes.io/pre-shared-cert: "certificate-dev-docfactory"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
    - secretName: certificate-docfactory
  backend:
    serviceName: docfactory
    servicePort: 443
  rules:
    - host: docs-factory-backend.dev.cloud.prueba.com.mx
      http:
        paths:
          - path: /*
            backend:
              serviceName: docfactory
              servicePort: 443
